PythonSource/pythoncore/pascalParser.py
# Generated from pascal.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class pascalParser ( Parser ):

    grammarFileName = "pascal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "':='", "','", 
                     "';'", "':'", "'='", "'<>'", "'<'", "'<='", "'>='", 
                     "'>'", "'('", "')'", "'['", "'(.'", "']'", "'.)'", 
                     "'^'", "'@'", "'.'", "'..'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", 
                      "CHAR", "CHR", "CONST", "DIV", "DO", "DOWNTO", "ELSE", 
                      "END", "FILE", "FOR", "FUNCTION", "GOTO", "IF", "IN", 
                      "INTEGER", "LABEL", "MOD", "NIL", "NOT", "OF", "OR", 
                      "PACKED", "PROCEDURE", "PROGRAM", "REAL", "RECORD", 
                      "REPEAT", "SET", "THEN", "TO", "TYPE", "UNTIL", "VAR", 
                      "WHILE", "WITH", "PLUS", "MINUS", "STAR", "SLASH", 
                      "ASSIGN", "COMMA", "SEMI", "COLON", "EQUAL", "NOT_EQUAL", 
                      "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK", 
                      "LBRACK2", "RBRACK", "RBRACK2", "POINTER", "AT", "DOT", 
                      "DOTDOT", "LCURLY", "RCURLY", "UNIT", "INTERFACE", 
                      "USES", "STRING", "IMPLEMENTATION", "WS", "COMMENT_1", 
                      "COMMENT_2", "IDENT", "STRING_LITERAL", "NUM_INT" ]

    RULE_program = 0
    RULE_programHeading = 1
    RULE_identifier = 2
    RULE_block = 3
    RULE_usesUnitsPart = 4
    RULE_labelDeclarationPart = 5
    RULE_label = 6
    RULE_constantDefinitionPart = 7
    RULE_constantDefinition = 8
    RULE_constantChr = 9
    RULE_constant = 10
    RULE_unsignedNumber = 11
    RULE_unsignedInteger = 12
    RULE_unsignedReal = 13
    RULE_sign = 14
    RULE_string = 15
    RULE_typeDefinitionPart = 16
    RULE_typeDefinition = 17
    RULE_functionType = 18
    RULE_procedureType = 19
    RULE_typeT = 20
    RULE_simpleType = 21
    RULE_scalarType = 22
    RULE_subrangeType = 23
    RULE_typeIdentifier = 24
    RULE_structuredType = 25
    RULE_unpackedStructuredType = 26
    RULE_stringtype = 27
    RULE_arrayType = 28
    RULE_typeList = 29
    RULE_indexType = 30
    RULE_componentType = 31
    RULE_recordType = 32
    RULE_fieldList = 33
    RULE_fixedPart = 34
    RULE_recordSection = 35
    RULE_variantPart = 36
    RULE_tag = 37
    RULE_variant = 38
    RULE_setType = 39
    RULE_baseType = 40
    RULE_fileType = 41
    RULE_pointerType = 42
    RULE_variableDeclarationPart = 43
    RULE_variableDeclaration = 44
    RULE_procedureAndFunctionDeclarationPart = 45
    RULE_procedureOrFunctionDeclaration = 46
    RULE_procedureDeclaration = 47
    RULE_formalParameterList = 48
    RULE_formalParameterSection = 49
    RULE_parameterGroup = 50
    RULE_identifierList = 51
    RULE_constList = 52
    RULE_functionDeclaration = 53
    RULE_resultType = 54
    RULE_statement = 55
    RULE_unlabelledStatement = 56
    RULE_simpleStatement = 57
    RULE_assignmentStatement = 58
    RULE_variable = 59
    RULE_expression = 60
    RULE_simpleExpression = 61
    RULE_term = 62
    RULE_signedFactor = 63
    RULE_factor = 64
    RULE_unsignedConstant = 65
    RULE_functionDesignator = 66
    RULE_parameterList = 67
    RULE_setT = 68
    RULE_elementList = 69
    RULE_element = 70
    RULE_procedureStatement = 71
    RULE_actualParameter = 72
    RULE_gotoStatement = 73
    RULE_emptyStatement = 74
    RULE_empty = 75
    RULE_structuredStatement = 76
    RULE_compoundStatement = 77
    RULE_statements = 78
    RULE_conditionalStatement = 79
    RULE_ifStatement = 80
    RULE_caseStatement = 81
    RULE_caseListElement = 82
    RULE_repetetiveStatement = 83
    RULE_whileStatement = 84
    RULE_repeatStatement = 85
    RULE_forStatement = 86
    RULE_forList = 87
    RULE_initialValue = 88
    RULE_finalValue = 89
    RULE_withStatement = 90
    RULE_recordVariableList = 91

    ruleNames =  [ "program", "programHeading", "identifier", "block", "usesUnitsPart", 
                   "labelDeclarationPart", "label", "constantDefinitionPart", 
                   "constantDefinition", "constantChr", "constant", "unsignedNumber", 
                   "unsignedInteger", "unsignedReal", "sign", "string", 
                   "typeDefinitionPart", "typeDefinition", "functionType", 
                   "procedureType", "typeT", "simpleType", "scalarType", 
                   "subrangeType", "typeIdentifier", "structuredType", "unpackedStructuredType", 
                   "stringtype", "arrayType", "typeList", "indexType", "componentType", 
                   "recordType", "fieldList", "fixedPart", "recordSection", 
                   "variantPart", "tag", "variant", "setType", "baseType", 
                   "fileType", "pointerType", "variableDeclarationPart", 
                   "variableDeclaration", "procedureAndFunctionDeclarationPart", 
                   "procedureOrFunctionDeclaration", "procedureDeclaration", 
                   "formalParameterList", "formalParameterSection", "parameterGroup", 
                   "identifierList", "constList", "functionDeclaration", 
                   "resultType", "statement", "unlabelledStatement", "simpleStatement", 
                   "assignmentStatement", "variable", "expression", "simpleExpression", 
                   "term", "signedFactor", "factor", "unsignedConstant", 
                   "functionDesignator", "parameterList", "setT", "elementList", 
                   "element", "procedureStatement", "actualParameter", "gotoStatement", 
                   "emptyStatement", "empty", "structuredStatement", "compoundStatement", 
                   "statements", "conditionalStatement", "ifStatement", 
                   "caseStatement", "caseListElement", "repetetiveStatement", 
                   "whileStatement", "repeatStatement", "forStatement", 
                   "forList", "initialValue", "finalValue", "withStatement", 
                   "recordVariableList" ]

    EOF = Token.EOF
    AND=1
    ARRAY=2
    BEGIN=3
    BOOLEAN=4
    CASE=5
    CHAR=6
    CHR=7
    CONST=8
    DIV=9
    DO=10
    DOWNTO=11
    ELSE=12
    END=13
    FILE=14
    FOR=15
    FUNCTION=16
    GOTO=17
    IF=18
    IN=19
    INTEGER=20
    LABEL=21
    MOD=22
    NIL=23
    NOT=24
    OF=25
    OR=26
    PACKED=27
    PROCEDURE=28
    PROGRAM=29
    REAL=30
    RECORD=31
    REPEAT=32
    SET=33
    THEN=34
    TO=35
    TYPE=36
    UNTIL=37
    VAR=38
    WHILE=39
    WITH=40
    PLUS=41
    MINUS=42
    STAR=43
    SLASH=44
    ASSIGN=45
    COMMA=46
    SEMI=47
    COLON=48
    EQUAL=49
    NOT_EQUAL=50
    LT=51
    LE=52
    GE=53
    GT=54
    LPAREN=55
    RPAREN=56
    LBRACK=57
    LBRACK2=58
    RBRACK=59
    RBRACK2=60
    POINTER=61
    AT=62
    DOT=63
    DOTDOT=64
    LCURLY=65
    RCURLY=66
    UNIT=67
    INTERFACE=68
    USES=69
    STRING=70
    IMPLEMENTATION=71
    WS=72
    COMMENT_1=73
    COMMENT_2=74
    IDENT=75
    STRING_LITERAL=76
    NUM_INT=77

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programHeading(self):
            return self.getTypedRuleContext(pascalParser.ProgramHeadingContext,0)


        def block(self):
            return self.getTypedRuleContext(pascalParser.BlockContext,0)


        def DOT(self):
            return self.getToken(pascalParser.DOT, 0)

        def INTERFACE(self):
            return self.getToken(pascalParser.INTERFACE, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = pascalParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.programHeading()
            self.state = 186
            _la = self._input.LA(1)
            if _la==pascalParser.INTERFACE:
                self.state = 185
                self.match(pascalParser.INTERFACE)


            self.state = 188
            self.block()
            self.state = 189
            self.match(pascalParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramHeadingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(pascalParser.PROGRAM, 0)

        def identifier(self):
            return self.getTypedRuleContext(pascalParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(pascalParser.SEMI, 0)

        def LPAREN(self):
            return self.getToken(pascalParser.LPAREN, 0)

        def identifierList(self):
            return self.getTypedRuleContext(pascalParser.IdentifierListContext,0)


        def RPAREN(self):
            return self.getToken(pascalParser.RPAREN, 0)

        def UNIT(self):
            return self.getToken(pascalParser.UNIT, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_programHeading

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramHeading" ):
                listener.enterProgramHeading(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramHeading" ):
                listener.exitProgramHeading(self)




    def programHeading(self):

        localctx = pascalParser.ProgramHeadingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programHeading)
        self._la = 0 # Token type
        try:
            self.state = 205
            token = self._input.LA(1)
            if token in [pascalParser.PROGRAM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 191
                self.match(pascalParser.PROGRAM)
                self.state = 192
                self.identifier()
                self.state = 197
                _la = self._input.LA(1)
                if _la==pascalParser.LPAREN:
                    self.state = 193
                    self.match(pascalParser.LPAREN)
                    self.state = 194
                    self.identifierList()
                    self.state = 195
                    self.match(pascalParser.RPAREN)


                self.state = 199
                self.match(pascalParser.SEMI)

            elif token in [pascalParser.UNIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 201
                self.match(pascalParser.UNIT)
                self.state = 202
                self.identifier()
                self.state = 203
                self.match(pascalParser.SEMI)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(pascalParser.IDENT, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)




    def identifier(self):

        localctx = pascalParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self.match(pascalParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compoundStatement(self):
            return self.getTypedRuleContext(pascalParser.CompoundStatementContext,0)


        def labelDeclarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.LabelDeclarationPartContext)
            else:
                return self.getTypedRuleContext(pascalParser.LabelDeclarationPartContext,i)


        def constantDefinitionPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.ConstantDefinitionPartContext)
            else:
                return self.getTypedRuleContext(pascalParser.ConstantDefinitionPartContext,i)


        def typeDefinitionPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.TypeDefinitionPartContext)
            else:
                return self.getTypedRuleContext(pascalParser.TypeDefinitionPartContext,i)


        def variableDeclarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.VariableDeclarationPartContext)
            else:
                return self.getTypedRuleContext(pascalParser.VariableDeclarationPartContext,i)


        def procedureAndFunctionDeclarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.ProcedureAndFunctionDeclarationPartContext)
            else:
                return self.getTypedRuleContext(pascalParser.ProcedureAndFunctionDeclarationPartContext,i)


        def usesUnitsPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.UsesUnitsPartContext)
            else:
                return self.getTypedRuleContext(pascalParser.UsesUnitsPartContext,i)


        def IMPLEMENTATION(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.IMPLEMENTATION)
            else:
                return self.getToken(pascalParser.IMPLEMENTATION, i)

        def getRuleIndex(self):
            return pascalParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = pascalParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 218
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 8)) & ~0x3f) == 0 and ((1 << (_la - 8)) & ((1 << (pascalParser.CONST - 8)) | (1 << (pascalParser.FUNCTION - 8)) | (1 << (pascalParser.LABEL - 8)) | (1 << (pascalParser.PROCEDURE - 8)) | (1 << (pascalParser.TYPE - 8)) | (1 << (pascalParser.VAR - 8)) | (1 << (pascalParser.USES - 8)) | (1 << (pascalParser.IMPLEMENTATION - 8)))) != 0):
                self.state = 216
                token = self._input.LA(1)
                if token in [pascalParser.LABEL]:
                    self.state = 209
                    self.labelDeclarationPart()

                elif token in [pascalParser.CONST]:
                    self.state = 210
                    self.constantDefinitionPart()

                elif token in [pascalParser.TYPE]:
                    self.state = 211
                    self.typeDefinitionPart()

                elif token in [pascalParser.VAR]:
                    self.state = 212
                    self.variableDeclarationPart()

                elif token in [pascalParser.FUNCTION, pascalParser.PROCEDURE]:
                    self.state = 213
                    self.procedureAndFunctionDeclarationPart()

                elif token in [pascalParser.USES]:
                    self.state = 214
                    self.usesUnitsPart()

                elif token in [pascalParser.IMPLEMENTATION]:
                    self.state = 215
                    self.match(pascalParser.IMPLEMENTATION)

                else:
                    raise NoViableAltException(self)

                self.state = 220
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 221
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UsesUnitsPartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USES(self):
            return self.getToken(pascalParser.USES, 0)

        def identifierList(self):
            return self.getTypedRuleContext(pascalParser.IdentifierListContext,0)


        def SEMI(self):
            return self.getToken(pascalParser.SEMI, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_usesUnitsPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsesUnitsPart" ):
                listener.enterUsesUnitsPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsesUnitsPart" ):
                listener.exitUsesUnitsPart(self)




    def usesUnitsPart(self):

        localctx = pascalParser.UsesUnitsPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_usesUnitsPart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 223
            self.match(pascalParser.USES)
            self.state = 224
            self.identifierList()
            self.state = 225
            self.match(pascalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LabelDeclarationPartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(pascalParser.LABEL, 0)

        def label(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.LabelContext)
            else:
                return self.getTypedRuleContext(pascalParser.LabelContext,i)


        def SEMI(self):
            return self.getToken(pascalParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.COMMA)
            else:
                return self.getToken(pascalParser.COMMA, i)

        def getRuleIndex(self):
            return pascalParser.RULE_labelDeclarationPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabelDeclarationPart" ):
                listener.enterLabelDeclarationPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabelDeclarationPart" ):
                listener.exitLabelDeclarationPart(self)




    def labelDeclarationPart(self):
